page state button

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
 .movie-section {
-    display: flex;
+  display: flex;
+}
 
+.card {
+  width: 100px;
+}
+
+video {
+  width: 100%;
+}
+
+.more-button {
+  width: 100px;
+  height: 100px;
+  background-color: red;
 }
