--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   color: #fff;
+  background-color: #040714;
   font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
